--- a/src/components/TodoList/TodoList.css
+++ b/src/components/TodoList/TodoList.css
@@ -1,6 +1,7 @@
 .TodoList {
-    padding: 100px;
-    border: 1px solid black;
+    margin: 0;
+    padding-bottom: 100px;
+    padding-left: 100px;;
 }
 
 .TodoList__item {
